# aoc-2023

./: .gitignore
day-1/: CMakeLists.txt  Makefile  main.cpp
day-2/: Makefile  main.cpp
